--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-django-debug-toolbar = "*"
-mysqlclient = "*"
+django-debug-toolbar = "==3.2.1"
+psycopg2-binary = "*"
+asgiref = "==3.4.1"
+pytz = "==2021.1"
+sqlparse = "==0.4.1"
+Django = "==3.2.5"
+psycopg2 = "*"
+django-admin-interface = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.8"
